--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crypto-platform",
   "version": "0.1.0",
   "private": true,
-  "hompage":"https://khoingle.github.io/crypto-platform",  
+  "hompage":"https://khoingle.github.io/",  
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.2",
